Version Beta 1.6.0

- Fehler in der Aktualisierung der Modelle behoben.
  Alle Models aktualisieren sich jetzt automatisch. Dadurch
  Entfallen alle "Aktualisieren" Buttons.
- Armeen können im gleichen Quest erstellt werden, wie AIs.

------------------------------------------------------------

Version Beta 1.5.4

- KI-Armeen eiern nicht mehr herum
- Option hinzugefügt, um die maximale Anzahl an Armeen die
  ein einziges Ziel des Standard Controller angreifen, kann
  nun erhöht werden.

------------------------------------------------------------

Version Beta 1.5.3

Programm
- Behavior geändert: Reward_AI_EnableArmyAttack
  * Parameter PlayerID wurde entfernt
- Behavior geändert: Reward_AI_EnableArmyPatrol
  * Parameter PlayerID wurde entfernt
- Behavior geändert: Reward_AI_CreateSpawnArmy
  * Parameter Typ wurde entfernt
- Button "Dokumentation" im Hilfe-Tab hinzugefügt.

Bibliothek
- Optioin zum Abschalten von Angriffen einer Standardarmee
- Optioin zum Abschalten von Patrolien einer Standardarmee

------------------------------------------------------------

Version Beta 1.5.2

Das Abstürzproblem mit der Army wurde behoben.

------------------------------------------------------------

Version Beta 1.5.1

Es wird ein experimenteller Fix hinzugefügt, damit es keine
Probleme mehr mit CppLogic bezüglich Schreibung von Ordner-
und Dateinamen mehr gibt.

------------------------------------------------------------

Version Beta 1.5.0

Anpassung der Anwendung für den neuen Siedelwood Updater.