@@ -1127,7 +1127,7 @@
 </div> <!-- id="main" -->
 <div id="about">
 <i>generated by <a href="http://github.com/stevedonovan/LDoc">LDoc 1.4.6</a></i>
-<i style="float:right;">Last updated 2022-07-17 16:48:12 </i>
+<i style="float:right;">Last updated 2022-07-17 17:28:52 </i>
 </div> <!-- id="about" -->
 </div> <!-- id="container" -->
 
