@@ -327,6 +327,10 @@
 	<td class="summary">The receiver loses the game.</td>
 	</tr>
 	<tr>
+	<td class="name" nowrap><a href="#Reprisal_DefeatOtherPlayer">Reprisal_DefeatOtherPlayer (_PlayerID)</a></td>
+	<td class="summary">Another player loses the game.</td>
+	</tr>
+	<tr>
 	<td class="name" nowrap><a href="#Reprisal_DestroyEffect">Reprisal_DestroyEffect (_Effect)</a></td>
 	<td class="summary">Destroys the effect with the given effect name.</td>
 	</tr>
@@ -393,6 +397,10 @@
 	<tr>
 	<td class="name" nowrap><a href="#Reprisal_Victory">Reprisal_Victory (...)</a></td>
 	<td class="summary">The receiver wins the game.</td>
+	</tr>
+	<tr>
+	<td class="name" nowrap><a href="#Reprisal_VictoryOtherPlayer">Reprisal_VictoryOtherPlayer (_PlayerID)</a></td>
+	<td class="summary">Another player wins the game.</td>
 	</tr>
 </table>
 <h2><a href="#Rewards">Rewards</a></h2>
@@ -477,6 +485,10 @@
 	<tr>
 	<td class="name" nowrap><a href="#Reward_Defeat">Reward_Defeat (...)</a></td>
 	<td class="summary">The receiver loses the game.</td>
+	</tr>
+	<tr>
+	<td class="name" nowrap><a href="#Reward_DefeatOtherPlayer">Reward_DefeatOtherPlayer (_PlayerID)</a></td>
+	<td class="summary">Another player loses the game.</td>
 	</tr>
 	<tr>
 	<td class="name" nowrap><a href="#Reward_DestroyEffect">Reward_DestroyEffect (_Effect)</a></td>
@@ -578,6 +590,10 @@
 	<tr>
 	<td class="name" nowrap><a href="#Reward_Victory">Reward_Victory (...)</a></td>
 	<td class="summary">The receiver wins the game.</td>
+	</tr>
+	<tr>
+	<td class="name" nowrap><a href="#Reward_VictoryOtherPlayer">Reward_VictoryOtherPlayer (_PlayerID)</a></td>
+	<td class="summary">Another player wins the game.</td>
 	</tr>
 </table>
 <h2><a href="#Triggers">Triggers</a></h2>
@@ -2165,6 +2181,27 @@
 
 </dd>
     <dt>
+    <a name = "Reprisal_DefeatOtherPlayer"></a>
+    <strong>Reprisal_DefeatOtherPlayer (_PlayerID)</strong>
+    </dt>
+    <dd>
+    Another player loses the game.
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">_PlayerID</span>
+            <span class="types"><span class="type">number</span></span>
+         Target player
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+    <dt>
     <a name = "Reprisal_DestroyEffect"></a>
     <strong>Reprisal_DestroyEffect (_Effect)</strong>
     </dt>
@@ -2535,6 +2572,27 @@
     <ul>
         <li><span class="parameter">...</span>
 
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+    <dt>
+    <a name = "Reprisal_VictoryOtherPlayer"></a>
+    <strong>Reprisal_VictoryOtherPlayer (_PlayerID)</strong>
+    </dt>
+    <dd>
+    Another player wins the game.
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">_PlayerID</span>
+            <span class="types"><span class="type">number</span></span>
+         Target player
         </li>
     </ul>
 
@@ -3153,6 +3211,27 @@
     <ul>
         <li><span class="parameter">...</span>
 
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+    <dt>
+    <a name = "Reward_DefeatOtherPlayer"></a>
+    <strong>Reward_DefeatOtherPlayer (_PlayerID)</strong>
+    </dt>
+    <dd>
+    Another player loses the game.
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">_PlayerID</span>
+            <span class="types"><span class="type">number</span></span>
+         Target player
         </li>
     </ul>
 
@@ -3839,6 +3918,27 @@
 
 
 </dd>
+    <dt>
+    <a name = "Reward_VictoryOtherPlayer"></a>
+    <strong>Reward_VictoryOtherPlayer (_PlayerID)</strong>
+    </dt>
+    <dd>
+    Another player wins the game.
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">_PlayerID</span>
+            <span class="types"><span class="type">number</span></span>
+         Target player
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
 </dl>
     <h2 class="section-header "><a name="Triggers"></a>Triggers</h2>
 
@@ -4416,7 +4516,7 @@
 </div> <!-- id="main" -->
 <div id="about">
 <i>generated by <a href="http://github.com/stevedonovan/LDoc">LDoc 1.4.6</a></i>
-<i style="float:right;">Last updated 2022-07-17 16:48:12 </i>
+<i style="float:right;">Last updated 2022-07-17 17:28:52 </i>
 </div> <!-- id="about" -->
 </div> <!-- id="container" -->
 
